Fix CSS properties to improve the readability and UX of interacting with input fields

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -48,7 +48,7 @@ section {
 .header-controls-search {
   position: relative;
   z-index: 1;
-  background-position: -64px 0;
+  background-position: -65px 0;
 }
 .header-controls-profile {
   position: relative;
@@ -77,10 +77,10 @@ section {
 }
 .header-controls-search-form {
   position: absolute;
-  right: 65px;
+  right: 60px;
   top: calc(50% - 19px);
   display: block;
-  width: 233px;
+  width: 240px;
   height: 38px;
   padding: 0 20px;
   background: #ffffff;
